--- a/src/components/LoginComponent/loginComponent.css
+++ b/src/components/LoginComponent/loginComponent.css
@@ -6,32 +6,8 @@
     justify-content: center;
 }
 
-.login-input {
-    font-family: Montserrat, serif;
-    font-size: 1.25rem;
-    font-weight: 500;
-    padding-left: 1rem;
-    width: 425px;
-    height: 40px;
-    color: black;
-    border: 1px solid white;
-    border-radius: 5px;
-    background-color: white;
-    margin-right: 7rem;
-}
-
-.login-input-password {
-    font-family: Montserrat, serif;
-    font-size: 1.25rem;
-    font-weight: 500;
-    padding-left: 1rem;
-    width: 345px;
-    height: 40px;
-    color: black;
-    border: 1px solid white;
-    border-bottom-left-radius: 5px;
-    border-top-left-radius: 5px;
-    background-color: white;
+.main-title {
+    margin-bottom: 5rem;
 }
 
 
@@ -43,19 +19,29 @@ label {
 }
 
 .span-mandatory {
-    font-family: Montserrat, serif;
-    font-size: 1rem;
-    font-weight: 400;
+    font-family: Roboto, serif;
+    font-size: 0.9rem;
+    font-weight: 300;
     letter-spacing: 1px;
     color: white;
-    opacity: 60%;
+    margin-bottom: 5rem;
 }
 
-.asterisk {
-    color: red;
-}
 
 svg {
     background-color: #6EFF3C;
     margin-top: 0.7rem;
+}
+
+.div-for-input {
+    display: flex;
+    margin-bottom: 3rem;
+    width: 100%;
+    justify-content: end;
+}
+
+.div-main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
