reformat code, fix styles

--- a/src/components/InputWithSVG/inputForPassword.css
+++ b/src/components/InputWithSVG/inputForPassword.css
@@ -1,6 +1,5 @@
 .svg-div {
     width: 80px;
-    background-color: #6EFF3C;
     height: 40px;
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
@@ -8,10 +7,18 @@
     margin-right: 7rem;
 }
 
+.green {
+    background-color: #6EFF3C;
+}
+
+.yellow {
+    background-color: #FFF171;
+}
+
 .login-input-password {
-    font-family: Montserrat, serif;
+    font-family: Roboto, serif;
     font-size: 1.25rem;
-    font-weight: 500;
+    font-weight: 400;
     padding-left: 1rem;
     width: 345px;
     height: 40px;
@@ -21,4 +28,12 @@
     border-top-left-radius: 5px;
     background-color: white;
     margin-left: 2rem;
+}
+
+.span-status-show {
+    font-family: Montserrat, serif;
+    font-size: 1rem;
+    font-weight: 600;
+    line-height: 40px;
+    background-color: transparent;
 }
