--- a/src/components/inputLoginNoSVG/inputLoginNoSVG.css
+++ b/src/components/inputLoginNoSVG/inputLoginNoSVG.css
@@ -1,7 +1,7 @@
 .login-input {
-    font-family: Montserrat, serif;
+    font-family: Roboto, serif;
     font-size: 1.25rem;
-    font-weight: 500;
+    font-weight: 400;
     padding-left: 1rem;
     width: 425px;
     height: 40px;
