--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,16 +1,12 @@
 .footer {
-    background-color: #0F0F0F;
-    height: 10vh;
-}
-
-.footer-elements {
     display: flex;
-    height: 10vh;
-    align-items: center;
-    justify-content: center;
+    background-color: #0F0F0F;
+    height: 7rem;
+    justify-content: space-evenly;
 }
 
 .footer-list-item {
+    display: block;
     color: white;
     font-family: Roboto;
     font-weight: 300;
@@ -18,6 +14,7 @@
     letter-spacing: 1px;
     list-style: none;
     margin: 0 3rem;
+    text-decoration: none;
 }
 
 
