--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,19 +1,33 @@
 .navbar {
+    display: flex;
     background-color: #0F0F0F;
     height: 5rem;
+    justify-content: space-around;
 }
 
 .list-item {
+    display: inline-block;
+    width: 10rem;
+    height: 5rem;
     color: white;
     font-family: Roboto;
     font-weight: 400;
-    font-size: 1.5rem;
-    list-style: none;
+    font-size: 1rem;
+    text-decoration: none;
+    line-height: 5rem;
+    text-align: center;
 }
 
-.navbar-elements {
-    display: flex;
-    height: 5rem;
-    align-items: center;
-    justify-content: space-evenly;
+@media (min-width: 1920px) {
+    .list-item {
+        font-size: 1.5rem;
+    }
 }
+
+.navbar-right-group {
+    text-align: center;
+    display: block;
+    width: 20rem;
+}
+
+
