Add @media for register component (mobile to be done)

--- a/src/components/InputWithSVG/inputForPassword.css
+++ b/src/components/InputWithSVG/inputForPassword.css
@@ -4,7 +4,10 @@
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
     text-align: center;
-    margin-right: 7rem;
+}
+
+.svg-div:hover {
+    cursor: pointer;
 }
 
 .green {
@@ -27,7 +30,7 @@
     border-bottom-left-radius: 5px;
     border-top-left-radius: 5px;
     background-color: white;
-    margin-left: 2rem;
+
 }
 
 .span-status-show {
