--- a/src/components/buttons/home_login_button/btnLoginHome.css
+++ b/src/components/buttons/home_login_button/btnLoginHome.css
@@ -13,6 +13,10 @@
 }
 
 .btn-span {
+    display: block;
+    width: 120px;
+    height: 50px;
+    border-radius: 25px;
     text-decoration: none;
     line-height: 43px;
     font-family: Roboto, serif;
@@ -33,5 +37,9 @@
     .btn-span {
         line-height: 53px;
         font-size: 1.5rem;
+        display: block;
+        width: 150px;
+        height: 60px;
+        border-radius: 30px;
     }
 }
