--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -2,32 +2,30 @@
     display: flex;
     background-color: #0F0F0F;
     height: 5rem;
+    align-items: center;
     justify-content: space-around;
 }
 
-.list-item {
-    display: inline-block;
-    width: 10rem;
-    height: 5rem;
+.navbar-link {
     color: white;
     font-family: Roboto;
     font-weight: 400;
     font-size: 1rem;
     text-decoration: none;
-    line-height: 5rem;
     text-align: center;
 }
 
 @media (min-width: 1920px) {
-    .list-item {
+    .navbar-link {
         font-size: 1.5rem;
     }
 }
 
 .navbar-right-group {
-    text-align: center;
-    display: block;
+    text-align: end;
+    display: flex;
     width: 20rem;
+    justify-content: space-around;
 }
 
 
