--- a/src/components/registerComponent/registerComponent.css
+++ b/src/components/registerComponent/registerComponent.css
@@ -1,12 +1,83 @@
-.div-for-input {
+.div-for-input-register {
     display: flex;
-    margin-bottom: 1.5rem;
-    width: 100%;
-    justify-content: end;
+    margin-bottom: 1.3rem;
+    justify-content: space-between;
+    align-items: center;
+    width: 36rem;
+}
+
+.div-main-register {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    paddingTop: 3rem;
+}
+
+.main-title-register {
+    color: white;
+    font-family: Antonio, serif;
+    font-size: 3rem;
+    font-weight: 400;
+    margin-bottom: 3rem;
+}
+
+.span-mandatory-register {
+    font-family: Roboto, serif;
+    font-size: 0.9rem;
+    font-weight: 300;
+    letter-spacing: 1px;
+    color: white;
+    margin-bottom: 5rem;
+}
+
+@media (min-width: 768px) {
+    .main-title-register {
+        font-size: 4rem;
+    }
+}
+
+@media (min-width: 1280px) {
+    .main-title-register {
+        margin-top: 0.25rem;
+        margin-bottom: 0rem;
+   }
+}
+
+@media (min-width: 1440px) {
+    .main-title-register {
+        margin-top: 3.5rem;
+        margin-bottom: 1rem;
+    }
+    .span-mandatory-register {
+        margin-bottom: 3.5rem;
+    }
 }
 
 @media (min-width: 1920px) {
-    .div-for-input {
-        margin-bottom: 2rem;
+    .main-title-register {
+        margin-top: 7rem;
+        font-size: 5rem;
+    }
+    .span-mandatory-register {
+        margin-bottom: 5rem;
+    }
+}
+
+@media (1180px <= height <= 1400px ) and (820px <= width <= 1200px) {
+    .main-title-register {
+        margin-top: 10rem;
+        font-size: 5rem;
+    }
+}
+
+@media (min-width: 2300px) {
+    .main-title-register {
+        margin-top: 10rem;
+        margin-bottom: 4rem;
+        font-size: 6rem;
+    }
+    .span-mandatory-register {
+        margin-bottom: 6rem;
     }
 }
