--- a/src/components/LoginComponent/loginComponent.css
+++ b/src/components/LoginComponent/loginComponent.css
@@ -1,5 +1,4 @@
 .login-container {
-    height: calc(100vh - 5rem);
     background-color: #0F0F0F;
 }
 
@@ -18,7 +17,13 @@ label {
     color: white;
     margin-bottom: 5rem;
 }
-
+.main-title-login {
+    color: white;
+    font-family: Antonio, serif;
+    font-size: 4rem;
+    font-weight: 400;
+    margin-bottom: 3rem;
+}
 
 svg {
     background-color: #6EFF3C;
@@ -40,14 +45,74 @@ svg {
     justify-content: center;
 }
 
+@media (min-width: 768px) {
+    .div-main {
+        margin-top: 6rem;
+    }
+    .main-title-login {
+        margin-bottom: 6rem;
+    }
+}
+
+@media (min-width: 820px) {
+    .div-main {
+        margin-top: 8rem;
+    }
+    .main-title-login {
+        margin-bottom: 6rem;
+    }
+}
+
+@media (min-width: 1024px) {
+    .div-for-input {
+        margin-bottom: 1.8rem;
+    }
+    .div-main {
+        margin-top: 12rem;
+    }
+    .main-title-login {
+        margin-bottom: 8rem;
+        font-size: 5rem;
+    }
+}
+@media (min-width: 1440px) {
+    .div-for-input {
+        margin-bottom: 1.8rem;
+    }
+    .div-main {
+        margin-top: 4rem;
+    }
+    .main-title-login {
+        margin-bottom: 6rem;
+        font-size: 5rem;
+    }
+}
+
+
 @media (min-width: 1920px) {
     .div-for-input {
         margin-bottom: 1.8rem;
     }
-}
-
-@media (min-width: 1920px) {
-    .div-for-input {
-        margin-bottom: 2.5rem;
+    .div-main {
+        margin-top: 8rem;
+    }
+    .main-title-login {
+        margin-bottom: 6rem;
+        font-size: 5rem;
     }
 }
+
+@media (min-width: 2200px) {
+    .div-for-input {
+        margin-bottom: 1.8rem;
+    }
+    .div-main {
+        margin-top: 8rem;
+    }
+    .main-title-login {
+        margin-bottom: 6rem;
+        font-size: 6rem;
+    }
+}
+
+
