--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -10,11 +10,17 @@
     color: white;
     font-family: Roboto;
     font-weight: 300;
-    font-size: 1.25rem;
+    font-size: 1rem;
     letter-spacing: 1px;
     list-style: none;
     margin: 0 3rem;
     text-decoration: none;
+}
+
+@media (min-width: 1920px) {
+    .footer-list-item {
+        font-size: 1.25rem;
+    }
 }
 
 
