--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -15,6 +15,12 @@
     text-align: center;
 }
 
+@media (min-width: 1440px) {
+    .navbar-link {
+        font-size: 1.25rem;
+    }
+}
+
 @media (min-width: 1920px) {
     .navbar-link {
         font-size: 1.5rem;
