create Manager component. Add desktop (xxl) style (raw)

--- a/src/components/InputWithSVG/inputForPassword.css
+++ b/src/components/InputWithSVG/inputForPassword.css
@@ -10,11 +10,11 @@
     cursor: pointer;
 }
 
-.green {
+.btn-green {
     background-color: #6EFF3C;
 }
 
-.yellow {
+.btn-yellow {
     background-color: #FFF171;
 }
 
