--- a/src/components/cardLeftSection/cardLeftSection.css
+++ b/src/components/cardLeftSection/cardLeftSection.css
@@ -4,7 +4,7 @@
     width: 30%;
 }
 
-.div-card-manager {
+.div-card-manager-left {
     display: flex;
     width: 100%;
     border: 1px solid #322424;
